assets/css/main.css
/* ... */
@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Bold Italic'), local('../font/SourceSans3-BoldItalic'),
        url('../font/SourceSans3-BoldItalic.woff2') format('woff2'),
        url('../font/SourceSans3-BoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 ExtraBold'), local('../font/SourceSans3-ExtraBold'),
        url('../font/SourceSans3-ExtraBold.woff2') format('woff2'),
        url('../font/SourceSans3-ExtraBold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 ExtraBold Italic'), local('../font/SourceSans3-ExtraBoldItalic'),
        url('../font/SourceSans3-ExtraBoldItalic.woff2') format('woff2'),
        url('../font/SourceSans3-ExtraBoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 ExtraLight'), local('../font/SourceSans3-ExtraLight'),
        url('../font/SourceSans3-ExtraLight.woff2') format('woff2'),
        url('../font/SourceSans3-ExtraLight.woff') format('woff');
    font-weight: 200;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 ExtraLight Italic'), local('../font/SourceSans3-ExtraLightItalic'),
        url('../font/SourceSans3-ExtraLightItalic.woff2') format('woff2'),
        url('../font/SourceSans3-ExtraLightItalic.woff') format('woff');
    font-weight: 200;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Italic'), local('../font/SourceSans3-Italic'),
        url('../font/SourceSans3-Italic.woff2') format('woff2'),
        url('../font/SourceSans3-Italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Light'), local('../font/SourceSans3-Light'),
        url('../font/SourceSans3-Light.woff2') format('woff2'),
        url('../font/SourceSans3-Light.woff') format('woff');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Light Italic'), local('../font/SourceSans3-LightItalic'),
        url('../font/SourceSans3-LightItalic.woff2') format('woff2'),
        url('../font/SourceSans3-LightItalic.woff') format('woff');
    font-weight: 300;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Medium'), local('../font/SourceSans3-Medium'),
        url('../font/SourceSans3-Medium.woff2') format('woff2'),
        url('../font/SourceSans3-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Medium Italic'), local('../font/SourceSans3-MediumItalic'),
        url('../font/SourceSans3-MediumItalic.woff2') format('woff2'),
        url('../font/SourceSans3-MediumItalic.woff') format('woff');
    font-weight: 500;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 Regular'), local('../font/SourceSans3-Regular'),
        url('../font/SourceSans3-Regular.woff2') format('woff2'),
        url('../font/SourceSans3-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 SemiBold'), local('../font/SourceSans3-SemiBold'),
        url('../font/SourceSans3-SemiBold.woff2') format('woff2'),
        url('../font/SourceSans3-SemiBold.woff') format('woff');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Source Sans 3';
    src: local('Source Sans 3 SemiBold Italic'), local('../font/SourceSans3-SemiBoldItalic'),
        url('../font/SourceSans3-SemiBoldItalic.woff2') format('woff2'),
        url('../font/SourceSans3-SemiBoldItalic.woff') format('woff');
    font-weight: 600;
    font-style: italic;
    font-display: swap;
}

body {
    font-family: 'Source Sans 3', Arial;
    font-weight: normal;
    font-style: normal;
    line-height: 1.1em;
    margin: 0;
    overflow-y: scroll;
    background-color: #efefef;
    background-color: color-mix(in srgb, var(--theme-colour) 1%, rgb(250, 250, 250));
    /* padding-top: 1em; */
}

h1 {
    font-size: 2.5em;
    word-break: break-word;
}

h3 {
    font-size: 1em;
}

a {
    color: color-mix(in srgb, var(--theme-colour) 85%, rgb(0, 0, 0));
}

p {
    text-align: justify;
}

mark {
    background: #fffb00;
    color: inherit;
}

code {
    height: 300px;
    overflow-y: scroll;
    font-family: Consolas, monaco, monospace;
    font-size: small;
}

figure {
    margin: 0;
}

div.metadata {
    display: flex;
    /* margin: 0px 0.75em; */
    word-break: break-word;
    gap: 0.5em;
    flex-direction: column;
    padding: 0.5em;
    flex-direction: row;
}
div.metadata > .icon {
    align-content: center;
    font-size: 1.5em;
    width: 1.5em
}

div.dll-types {
    display: flex;
    flex-direction: column;
    gap: 1em
}

div.dll-types>div>span:not(.type) {
    display: block;
}
/* ... */

